--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0"
+  },
+  "dependencies": {
+    "clean-css": "^4.2.3",
+    "node-sass-promise": "^1.0.0"
   }
 }
