--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "11ty": "npx @11ty/eleventy --serve"
+    "11ty": "npm run serve",
+    "serve": "npm-run-all --parallel bundle:*",
+    "bundle:eleventy": "eleventy --serve --quiet",
+    "bundle:tailwind": "parcel src/assets/css/* --out-dir build/assets/css",
+    "build": "npm-run-all --parallel prod:*",
+    "prod:eleventy": "eleventy",
+    "prod:tailwind": "parcel build src/assets/css/* --out-dir build/assets/css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-rss": "^1.0.9"
+    "@11ty/eleventy-plugin-rss": "^1.0.9",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "autoprefixer": "^9.8.6",
+    "cross-env": "^7.0.2",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^1.12.4",
+    "postcss": "^7.0.32",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^1.6.2"
   },
-  "dependencies": {
-    "clean-css": "^4.2.3",
-    "node-sass-promise": "^1.0.0"
-  }
+  "dependencies": {}
 }
