--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.6",
     "cross-env": "^7.0.2",
+    "html-minifier": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.4",
     "postcss": "^7.0.32",
