avatars on talk cards

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "11ty": "npm run serve",
     "serve": "npm-run-all --parallel bundle:*",
     "bundle:eleventy": "eleventy --serve",
-    "bundle:watch": "watch 'npm run dev:tailwind' ./src",
+    "bundle:watch-includes": "watch 'npm run dev:tailwind' ./src/_includes",
+    "bundle:watch-layouts": "watch 'npm run dev:tailwind' ./src/_layouts",
+    "bundle:watch-pages": "watch 'npm run dev:tailwind' ./src/pages",
     "dev:tailwind": "NODE_ENV=production parcel src/assets/css/* --out-dir build/assets/css",
     "build": "npm-run-all --parallel prod:*",
     "prod:eleventy": "eleventy",
