improved npm scripts

--- a/package.json
+++ b/package.json
@@ -4,33 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "11ty": "npm run serve",
-    "serve": "npm-run-all --parallel bundle:*",
-    "bundle:eleventy": "eleventy --serve",
-    "bundle:watch-includes": "watch 'npm run dev:tailwind' ./src/_includes",
-    "bundle:watch-layouts": "watch 'npm run dev:tailwind' ./src/_layouts",
-    "bundle:watch-pages": "watch 'npm run dev:tailwind' ./src/pages",
-    "dev:tailwind": "parcel src/assets/css/* --out-dir build/assets/css",
-    "build": "npm-run-all --parallel prod:*",
-    "prod:eleventy": "eleventy",
-    "prod:tailwind": "parcel build src/assets/css/* --out-dir build/assets/css"
+    "dev": "npm-run-all -p dev:css:watch dev:11ty",
+    "build": "eleventy && npm run build:css",
+    "dev:11ty": "eleventy --serve",
+    "dev:css": "postcss ./src/assets/css/style.pcss -o ./build/assets/css/style.css",
+    "dev:css:watch": "watch 'npm run dev:css' ./src/assets/css",
+    "build:css": "NODE_ENV=production postcss ./src/assets/css/style.pcss -o ./build/assets/css/style.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@tailwindcss/typography": "^0.2.0",
     "autoprefixer": "^9.8.6",
-    "cross-env": "^7.0.2",
+    "cssnano": "^4.1.10",
     "html-minifier": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "parcel": "^1.12.4",
     "postcss": "^7.0.32",
+    "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
-    "rimraf": "^3.0.2",
     "tailwindcss": "^1.6.2",
     "watch": "^1.0.2"
   },
