--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "html-minifier": "^4.0.0",
+    "jsonminify": "^0.4.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
     "postcss-cli": "^7.1.1",
